--- a/DataDefinitions/Properties/SignalSource.it.resx
+++ b/DataDefinitions/Properties/SignalSource.it.resx
@@ -417,4 +417,12 @@
     <value>Relitto minore</value>
     <comment>Minor Wreckage</comment>
   </data>
+  <data name="Settlement_Unflattened_TGMegaBarnacle" xml:space="preserve">
+    <value>Sito Guglia Thargoid</value>
+    <comment>Thargoid Spire Site</comment>
+  </data>
+  <data name="FIXED_EVENT_PROBE" xml:space="preserve">
+    <value>Antica sonda</value>
+    <comment>Ancient Probe</comment>
+  </data>
 </root>
