--- a/DataDefinitions/Properties/SignalSource.pt-BR.resx
+++ b/DataDefinitions/Properties/SignalSource.pt-BR.resx
@@ -421,4 +421,8 @@
     <value>Local de Pináculo Thargoid</value>
     <comment>Thargoid Spire Site</comment>
   </data>
+  <data name="FIXED_EVENT_PROBE" xml:space="preserve">
+    <value>Sonda Antiga</value>
+    <comment>Ancient Probe</comment>
+  </data>
 </root>
