--- a/DataDefinitions/Properties/Commodities.de.resx
+++ b/DataDefinitions/Properties/Commodities.de.resx
@@ -1735,15 +1735,15 @@
     <comment>Commodity M3_TissueSample_Spores</comment>
   </data>
   <data name="S6_TissueSample_Mesoglea" xml:space="preserve">
-    <value>Hülsen-Mesoglea</value>
+    <value>Mesoglea Gewebeprobe</value>
     <comment>Commodity S6_TissueSample_Mesoglea</comment>
   </data>
   <data name="S6_TissueSample_Cells" xml:space="preserve">
-    <value>Schalenaussengewebeprobe</value>
+    <value>Zellen Gewebeprobe</value>
     <comment>Commodity S6_TissueSample_Cells</comment>
   </data>
   <data name="S6_TissueSample_Coenosarc" xml:space="preserve">
-    <value>Hülsen-Schalengewebe</value>
+    <value>Coenosarc Gewebeprobe</value>
     <comment>Commodity S6_TissueSample_Coenosarc</comment>
   </data>
   <data name="SanumaMEAT" xml:space="preserve">
