--- a/SpeechResponder/Properties/CustomFunctions.Untranslated.resx
+++ b/SpeechResponder/Properties/CustomFunctions.Untranslated.resx
@@ -538,7 +538,7 @@ SecurityLevelDetails() takes a single argument of the security level for which y
 At current this does not have a lot of use as the security level object only contains its name, but this may be expanded in future.</value>
   </data>
   <data name="SetState" xml:space="preserve">
-    <value>This function will set a session state value.  The stored value may be retrieved using the `GetState()` function.
+	  <value>This function will set a session state value. The value will be available in future scripts or child scripts throughout the remainder of the EDDI session as a property of the persistent 'state' object. If you wish to refer to the stored value in the same script where it was stored then please retrieve the value using the 'GetState' function.
 
 SetState takes two arguments: the name of the state value to set, and its value.  The name of the state value will be converted to lower-case and spaces changed to underscores.  The value must be either a boolean, a number, a string, or a null / void value; other values will be ignored.
 
@@ -769,7 +769,7 @@ Common usage of this is to allow a text string to be pasted outside of EDDI, for
   <data name="GetState" xml:space="preserve">
     <value>This function will retrieve a session state value. 
 
-SetState takes one argument: the name of the state value to retrieve.  The name of the state value shall be converted to lower-case with spaces changed to underscores. 
+GetState takes one argument: the name of the state value to retrieve.  The name of the state value shall be converted to lower-case with spaces changed to underscores. 
 
 Common usage of this is to retrieve cumulative or persistent information stored using `SetState` during a session, for example:
 
