--- a/DataDefinitions/Properties/OrganicGenus.resx
+++ b/DataDefinitions/Properties/OrganicGenus.resx
@@ -165,7 +165,7 @@
   <data name="Fungoids" xml:space="preserve">
     <value>Fungoida</value>
   </data>
-  <data name="GroundStructIce" xml:space="preserve">
+  <data name="Ground_Struct_Ice" xml:space="preserve">
     <value>Crystalline Shards</value>
   </data>
   <data name="GyrePod" xml:space="preserve">
