--- a/DataDefinitions/Properties/MissionType.de.resx
+++ b/DataDefinitions/Properties/MissionType.de.resx
@@ -126,14 +126,8 @@
   <data name="Assassinate" xml:space="preserve">
     <value>Mordauftrag</value>
   </data>
-  <data name="AssassinateWing" xml:space="preserve">
-    <value>Mordauftrag im Wing</value>
-  </data>
   <data name="Collect" xml:space="preserve">
     <value>Beschaffungsmission</value>
-  </data>
-  <data name="CollectWing" xml:space="preserve">
-    <value>Beschaffung im Wing</value>
   </data>
   <data name="CommunityGoal" xml:space="preserve">
     <value>Gemeinschaftsziel</value>
@@ -144,14 +138,8 @@
   <data name="Delivery" xml:space="preserve">
     <value>Liefermission</value>
   </data>
-  <data name="DeliveryWing" xml:space="preserve">
-    <value>Lieferung im Wing</value>
-  </data>
   <data name="Disable" xml:space="preserve">
     <value>Oberflächeneinrichtung abschalten</value>
-  </data>
-  <data name="DisableWing" xml:space="preserve">
-    <value>Abschalten im Wing</value>
   </data>
   <data name="GenericPermit1" xml:space="preserve">
     <value>Einreisegenehmigung</value>
@@ -165,22 +153,13 @@
   <data name="Massacre" xml:space="preserve">
     <value>Massakermission</value>
   </data>
-  <data name="MassacreThargoid" xml:space="preserve">
-    <value>Thargoiden Massakermission</value>
-  </data>
-  <data name="MassacreWing" xml:space="preserve">
-    <value>Massakermission im Wing</value>
-  </data>
   <data name="Mining" xml:space="preserve">
     <value>Bergbaumission</value>
   </data>
-  <data name="MiningWing" xml:space="preserve">
-    <value>Bergbau im Wing</value>
-  </data>
-  <data name="PassengerBulk" xml:space="preserve">
+  <data name="Bulk" xml:space="preserve">
     <value>Passagiertransport</value>
   </data>
-  <data name="PassengerVIP" xml:space="preserve">
+  <data name="VIP" xml:space="preserve">
     <value>VIP-Transport</value>
   </data>
   <data name="Piracy" xml:space="preserve">
@@ -235,14 +214,8 @@
   <data name="RankEmp" xml:space="preserve">
     <value>Imperiale Aufstiegsmission</value>
   </data>
-  <data name="DisableMegaship" xml:space="preserve">
-    <value>Megaschiff ausschalten</value>
-  </data>
   <data name="Founder" xml:space="preserve">
     <value>Gründermission</value>
-  </data>
-  <data name="HackMegaship" xml:space="preserve">
-    <value>Megaschiff hacken</value>
   </data>
   <data name="Skimmer" xml:space="preserve">
     <value>Skimmer zerstören</value>
@@ -324,7 +297,7 @@
     <value>In Flammen</value>
     <comment>e.g. rescue from a burning station</comment>
   </data>
-  <data name="PassengerEvacuation" xml:space="preserve">
+  <data name="Evacuation" xml:space="preserve">
     <value>Passagier-Evakuierung</value>
   </data>
   <data name="Alert" xml:space="preserve">
