--- a/DataDefinitions/Properties/MissionType.fr.resx
+++ b/DataDefinitions/Properties/MissionType.fr.resx
@@ -124,14 +124,8 @@
   <data name="Assassinate" xml:space="preserve">
     <value>Assassinat</value>
   </data>
-  <data name="AssassinateWing" xml:space="preserve">
-    <value>Assassinat d'Escadrille</value>
-  </data>
   <data name="Collect" xml:space="preserve">
     <value>Collection</value>
-  </data>
-  <data name="CollectWing" xml:space="preserve">
-    <value>Collection d'Escadrille</value>
   </data>
   <data name="CommunityGoal" xml:space="preserve">
     <value>Objectif communautaire</value>
@@ -142,16 +136,9 @@
   <data name="Delivery" xml:space="preserve">
     <value>Livraison</value>
   </data>
-  <data name="DeliveryWing" xml:space="preserve">
-    <value>Livraison d'Escadrille</value>
-  </data>
   <data name="Disable" xml:space="preserve">
     <value>Désactiver installation de surface</value>
   </data>
-  <data name="DisableWing" xml:space="preserve">
-    <value>Désactiver Escadrille</value>
-  </data>
-  
   <data name="Hack" xml:space="preserve">
     <value>Piratage</value>
   </data>
@@ -161,22 +148,13 @@
   <data name="Massacre" xml:space="preserve">
     <value>Massacre</value>
   </data>
-  <data name="MassacreThargoid" xml:space="preserve">
-    <value>Massacre Thargoïd</value>
-  </data>
-  <data name="MassacreWing" xml:space="preserve">
-    <value>Massacre d'Escadrille</value>
-  </data>
   <data name="Mining" xml:space="preserve">
     <value>Minage</value>
   </data>
-  <data name="MiningWing" xml:space="preserve">
-    <value>Escadrille minière</value>
-  </data>
-  <data name="PassengerBulk" xml:space="preserve">
+  <data name="Bulk" xml:space="preserve">
     <value>Transport</value>
   </data>
-  <data name="PassengerVIP" xml:space="preserve">
+  <data name="VIP" xml:space="preserve">
     <value>Transport</value>
   </data>
   <data name="Piracy" xml:space="preserve">
