--- a/DataDefinitions/Properties/MissionType.it.resx
+++ b/DataDefinitions/Properties/MissionType.it.resx
@@ -126,14 +126,8 @@
   <data name="Assassinate" xml:space="preserve">
     <value>Assassinio</value>
   </data>
-  <data name="AssassinateWing" xml:space="preserve">
-    <value>Assassinio di gruppo</value>
-  </data>
   <data name="Collect" xml:space="preserve">
     <value>Raccolta</value>
-  </data>
-  <data name="CollectWing" xml:space="preserve">
-    <value>Raccolta di gruppo</value>
   </data>
   <data name="CommunityGoal" xml:space="preserve">
     <value>Obiettivo Comunitario</value>
@@ -144,14 +138,8 @@
   <data name="Delivery" xml:space="preserve">
     <value>Consegna</value>
   </data>
-  <data name="DeliveryWing" xml:space="preserve">
-    <value>Consegna di gruppo</value>
-  </data>
   <data name="Disable" xml:space="preserve">
     <value>Disabilitazione Installazione di Superficie</value>
-  </data>
-  <data name="DisableWing" xml:space="preserve">
-    <value>Disabilitazione di Gruppo</value>
   </data>
   <data name="GenericPermit1" xml:space="preserve">
     <value>Occasione per il Lasciapassare</value>
@@ -165,22 +153,13 @@
   <data name="Massacre" xml:space="preserve">
     <value>Massacro</value>
   </data>
-  <data name="MassacreThargoid" xml:space="preserve">
-    <value>Massacra Thargoid</value>
-  </data>
-  <data name="MassacreWing" xml:space="preserve">
-    <value>Massacro di Gruppo</value>
-  </data>
   <data name="Mining" xml:space="preserve">
     <value>Estrazione di Minerali</value>
   </data>
-  <data name="MiningWing" xml:space="preserve">
-    <value>Estrazione di Minerali in Gruppo</value>
-  </data>
-  <data name="PassengerBulk" xml:space="preserve">
+  <data name="Bulk" xml:space="preserve">
     <value>Trasporta</value>
   </data>
-  <data name="PassengerVIP" xml:space="preserve">
+  <data name="VIP" xml:space="preserve">
     <value>Trasporta</value>
   </data>
   <data name="Piracy" xml:space="preserve">
@@ -235,14 +214,8 @@
   <data name="RankEmp" xml:space="preserve">
     <value>Contratto per la Marina Imperiale</value>
   </data>
-  <data name="DisableMegaship" xml:space="preserve">
-    <value>Disabilita Mega nave</value>
-  </data>
   <data name="Founder" xml:space="preserve">
     <value>Fondatore</value>
-  </data>
-  <data name="HackMegaship" xml:space="preserve">
-    <value>Vìola Mega nave</value>
   </data>
   <data name="Skimmer" xml:space="preserve">
     <value>Obiettivi Skimmer</value>
@@ -324,7 +297,7 @@
     <value>A fuoco</value>
     <comment>e.g. rescue from a burning station</comment>
   </data>
-  <data name="PassengerEvacuation" xml:space="preserve">
+  <data name="Evacuation" xml:space="preserve">
     <value>Evacuazione dei Passeggeri</value>
   </data>
   <data name="Alert" xml:space="preserve">
