--- a/DataDefinitions/Properties/MissionType.pt-BR.resx
+++ b/DataDefinitions/Properties/MissionType.pt-BR.resx
@@ -126,14 +126,8 @@
   <data name="Assassinate" xml:space="preserve">
     <value>Assassinato</value>
   </data>
-  <data name="AssassinateWing" xml:space="preserve">
-    <value>Assassinato em Esquadrão</value>
-  </data>
   <data name="Collect" xml:space="preserve">
     <value>Coleta</value>
-  </data>
-  <data name="CollectWing" xml:space="preserve">
-    <value>Coleta em Esquadrão</value>
   </data>
   <data name="CommunityGoal" xml:space="preserve">
     <value>Objetivo da Comunidade</value>
@@ -144,14 +138,8 @@
   <data name="Delivery" xml:space="preserve">
     <value>Entrega</value>
   </data>
-  <data name="DeliveryWing" xml:space="preserve">
-    <value>Entrega em Esquadrão</value>
-  </data>
   <data name="Disable" xml:space="preserve">
     <value>Desabilitar Instalação em Superfície</value>
-  </data>
-  <data name="DisableWing" xml:space="preserve">
-    <value>Desabilitar em Esquadrão</value>
   </data>
   <data name="GenericPermit1" xml:space="preserve">
     <value>Oportunidade de Aquisição de Permissão</value>
@@ -165,22 +153,13 @@
   <data name="Massacre" xml:space="preserve">
     <value>Massacre</value>
   </data>
-  <data name="MassacreThargoid" xml:space="preserve">
-    <value>Massacre de Thargoid</value>
-  </data>
-  <data name="MassacreWing" xml:space="preserve">
-    <value>Massacre em Esquadrão</value>
-  </data>
   <data name="Mining" xml:space="preserve">
     <value>Mineração</value>
   </data>
-  <data name="MiningWing" xml:space="preserve">
-    <value>Mineração em Esquadrão</value>
-  </data>
-  <data name="PassengerBulk" xml:space="preserve">
+  <data name="Bulk" xml:space="preserve">
     <value>Transporte</value>
   </data>
-  <data name="PassengerVIP" xml:space="preserve">
+  <data name="VIP" xml:space="preserve">
     <value>Transporte</value>
   </data>
   <data name="Piracy" xml:space="preserve">
@@ -235,14 +214,8 @@
   <data name="RankEmp" xml:space="preserve">
     <value>Contrato da Marinha Imperial</value>
   </data>
-  <data name="DisableMegaship" xml:space="preserve">
-    <value>Desabilitar Meganave</value>
-  </data>
   <data name="Founder" xml:space="preserve">
     <value>Fundador</value>
-  </data>
-  <data name="HackMegaship" xml:space="preserve">
-    <value>Hackear Meganave</value>
   </data>
   <data name="Skimmer" xml:space="preserve">
     <value>Alvos Skimmer</value>
@@ -324,7 +297,7 @@
     <value>Em Chamas</value>
     <comment>e.g. rescue from a burning station</comment>
   </data>
-  <data name="PassengerEvacuation" xml:space="preserve">
+  <data name="Evacuation" xml:space="preserve">
     <value>Evacuação de Passageiro</value>
   </data>
   <data name="Alert" xml:space="preserve">
