--- a/DataDefinitions/Properties/MissionType.ru.resx
+++ b/DataDefinitions/Properties/MissionType.ru.resx
@@ -126,14 +126,8 @@
   <data name="Assassinate" xml:space="preserve">
     <value>Заказное убийство</value>
   </data>
-  <data name="AssassinateWing" xml:space="preserve">
-    <value>Заказное убийство для крыла</value>
-  </data>
   <data name="Collect" xml:space="preserve">
     <value>Поиск товаров</value>
-  </data>
-  <data name="CollectWing" xml:space="preserve">
-    <value>Поиск товаров для крыла</value>
   </data>
   <data name="CommunityGoal" xml:space="preserve">
     <value>Общественные Цели</value>
@@ -144,14 +138,8 @@
   <data name="Delivery" xml:space="preserve">
     <value>Доставка товара</value>
   </data>
-  <data name="DeliveryWing" xml:space="preserve">
-    <value>Доставка товара для крыла</value>
-  </data>
   <data name="Disable" xml:space="preserve">
     <value>Уничтожение беспилотников</value>
-  </data>
-  <data name="DisableWing" xml:space="preserve">
-    <value>Wing Disable</value>
   </data>
   <data name="GenericPermit1" xml:space="preserve">
     <value>Возможность получения разрешений</value>
@@ -165,22 +153,13 @@
   <data name="Massacre" xml:space="preserve">
     <value>Резня</value>
   </data>
-  <data name="MassacreThargoid" xml:space="preserve">
-    <value>Уничтожение Таргоидов</value>
-  </data>
-  <data name="MassacreWing" xml:space="preserve">
-    <value>Уничтожение целей длля крыла</value>
-  </data>
   <data name="Mining" xml:space="preserve">
     <value>Шахтерские</value>
   </data>
-  <data name="MiningWing" xml:space="preserve">
-    <value>Шахтерские для крыла</value>
-  </data>
-  <data name="PassengerBulk" xml:space="preserve">
+  <data name="Bulk" xml:space="preserve">
     <value>Транспорт</value>
   </data>
-  <data name="PassengerVIP" xml:space="preserve">
+  <data name="VIP" xml:space="preserve">
     <value>Транспорт</value>
   </data>
   <data name="Piracy" xml:space="preserve">
@@ -233,14 +212,8 @@
   <data name="RankEmp" xml:space="preserve">
     <value>Контракт Империи</value>
   </data>
-  <data name="DisableMegaship" xml:space="preserve">
-    <value>Обесточить Мегакорабль</value>
-  </data>
   <data name="Founder" xml:space="preserve">
     <value>Основатель</value>
-  </data>
-  <data name="HackMegaship" xml:space="preserve">
-    <value>Взлом Мегакоробля</value>
   </data>
   <data name="Skimmer" xml:space="preserve">
     <value>Цели беспелотники</value>
