--- a/DataDefinitions/Properties/MissionType.zh-CN.resx
+++ b/DataDefinitions/Properties/MissionType.zh-CN.resx
@@ -126,14 +126,8 @@
   <data name="Assassinate" xml:space="preserve">
     <value>刺杀</value>
   </data>
-  <data name="AssassinateWing" xml:space="preserve">
-    <value>组队刺杀</value>
-  </data>
   <data name="Collect" xml:space="preserve">
     <value>搜集</value>
-  </data>
-  <data name="CollectWing" xml:space="preserve">
-    <value>组队搜集</value>
   </data>
   <data name="CommunityGoal" xml:space="preserve">
     <value>社区目标</value>
@@ -144,14 +138,8 @@
   <data name="Delivery" xml:space="preserve">
     <value>投递</value>
   </data>
-  <data name="DeliveryWing" xml:space="preserve">
-    <value>组队投递</value>
-  </data>
   <data name="Disable" xml:space="preserve">
     <value>禁用地面站</value>
-  </data>
-  <data name="DisableWing" xml:space="preserve">
-    <value>禁用组队</value>
   </data>
   <data name="GenericPermit1" xml:space="preserve">
     <value>Permit Aquisition</value>
@@ -165,22 +153,13 @@
   <data name="Massacre" xml:space="preserve">
     <value>屠戮</value>
   </data>
-  <data name="MassacreThargoid" xml:space="preserve">
-    <value>八角屠戮</value>
-  </data>
-  <data name="MassacreWing" xml:space="preserve">
-    <value>组队屠戮</value>
-  </data>
   <data name="Mining" xml:space="preserve">
     <value>采矿</value>
   </data>
-  <data name="MiningWing" xml:space="preserve">
-    <value>组队采矿</value>
-  </data>
-  <data name="PassengerBulk" xml:space="preserve">
+  <data name="Bulk" xml:space="preserve">
     <value>运输</value>
   </data>
-  <data name="PassengerVIP" xml:space="preserve">
+  <data name="VIP" xml:space="preserve">
     <value>运输</value>
   </data>
   <data name="Piracy" xml:space="preserve">
@@ -235,14 +214,8 @@
   <data name="RankEmp" xml:space="preserve">
     <value>帝国海军合同</value>
   </data>
-  <data name="DisableMegaship" xml:space="preserve">
-    <value>禁用巨舰</value>
-  </data>
   <data name="Founder" xml:space="preserve">
     <value>创始人</value>
-  </data>
-  <data name="HackMegaship" xml:space="preserve">
-    <value>骇入巨舰</value>
   </data>
   <data name="Skimmer" xml:space="preserve">
     <value>Skimmer 目标</value>
@@ -324,7 +297,7 @@
     <value>失火</value>
     <comment>e.g. rescue from a burning station</comment>
   </data>
-  <data name="PassengerEvacuation" xml:space="preserve">
+  <data name="Evacuation" xml:space="preserve">
     <value>疏散乘客</value>
   </data>
   <data name="Alert" xml:space="preserve">
