--- a/DataDefinitions/Properties/Ship.resx
+++ b/DataDefinitions/Properties/Ship.resx
@@ -266,4 +266,7 @@ If transporting via taxi or dropship</comment>
     <value>your ship</value>
     <comment>If transporting via a generic ship (e.g. multicrew)</comment>
   </data>
+  <data name="yourType8" xml:space="preserve">
+	  <value>your</value><comment>e.g. *your* Type-8 Transporter</comment>
+  </data>
 </root>
