Add new material `searchrescuevoucher`

--- a/DataDefinitions/Properties/Materials.resx
+++ b/DataDefinitions/Properties/Materials.resx
@@ -701,4 +701,7 @@
     <value>Tactical Core Chip</value>
     <comment>Material unknowncorechip</comment>
   </data>
+  <data name="searchrescuevoucher" xml:space="preserve">
+	  <value>Search and Rescue Voucher</value><comment>material searchrescuevoucher</comment>
+  </data>
 </root>
