--- a/DataDefinitions/Properties/Materials.fr.resx
+++ b/DataDefinitions/Properties/Materials.fr.resx
@@ -645,10 +645,7 @@
     <value>Élément de propulsion Thargoïd</value>
     <comment>Material tg_propulsionelement</comment>
   </data>
-  <data name="tg_biomechanicalconduits" xml:space="preserve">
-    <value>Conduits biomécaniques Thargoïds</value>
-    <comment>Material tg_biomechanicalconduits</comment>
-  </data>
+  
   <data name="tg_weaponparts" xml:space="preserve">
     <value>Pièces d'armement Thargoïdes</value>
     <comment>Material tg_weaponparts</comment>
@@ -668,9 +665,8 @@
   
   <data name="tg_shutdowndata" xml:space="preserve">
     <value>Analyse de surcharge d'énergie massive</value>
-    <comment>tg_shutdowndata
-Material tg_shutdowndata
-Data collected when you observe a Thargoid Titan explode</comment>
+    <comment>Material tg_shutdowndata</comment>
   </data>
+  
   
 </root>
