--- a/DataDefinitions/Properties/Materials.de.resx
+++ b/DataDefinitions/Properties/Materials.de.resx
@@ -646,7 +646,7 @@
     <comment>Material tg_propulsionelement</comment>
   </data>
   <data name="tg_biomechanicalconduits" xml:space="preserve">
-    <value>Thargoiden Bio-Mechanische Bauteile</value>
+    <value>Biomechanische Leiter</value>
     <comment>Material tg_biomechanicalconduits</comment>
   </data>
   <data name="tg_weaponparts" xml:space="preserve">
@@ -695,12 +695,13 @@
   </data>
   <data name="tg_shutdowndata" xml:space="preserve">
     <value>Analyse einer enormen Energiespitze</value>
-    <comment>tg_shutdowndata
-Material tg_shutdowndata
-Data collected when you observe a Thargoid Titan explode</comment>
+    <comment>Material tg_shutdowndata</comment>
   </data>
   <data name="unknowncorechip" xml:space="preserve">
     <value>Taktischer Kern Chip</value>
     <comment>Material unknowncorechip</comment>
+  </data>
+  <data name="searchrescuevoucher" xml:space="preserve">
+	  <value>Such- und Rettungsgutschein</value><comment>material searchrescuevoucher</comment>
   </data>
 </root>
