--- a/DataDefinitions/Properties/Materials.ru.resx
+++ b/DataDefinitions/Properties/Materials.ru.resx
@@ -645,10 +645,7 @@
     <value>Реактивные элементы</value>
     <comment>Material tg_propulsionelement</comment>
   </data>
-  <data name="tg_biomechanicalconduits" xml:space="preserve">
-    <value>Биомеханические энергопроводники</value>
-    <comment>Material tg_biomechanicalconduits</comment>
-  </data>
+  
   <data name="tg_weaponparts" xml:space="preserve">
     <value>Детали вооружения</value>
     <comment>Material tg_weaponparts</comment>
@@ -668,9 +665,8 @@
   
   <data name="tg_shutdowndata" xml:space="preserve">
     <value>Параметры сильного энергетического импульса</value>
-    <comment>tg_shutdowndata
-Material tg_shutdowndata
-Data collected when you observe a Thargoid Titan explode</comment>
+    <comment>Material tg_shutdowndata</comment>
   </data>
+  
   
 </root>
