--- a/DataDefinitions/Properties/Materials.zh-CN.resx
+++ b/DataDefinitions/Properties/Materials.zh-CN.resx
@@ -646,7 +646,7 @@
     <comment>Material tg_propulsionelement</comment>
   </data>
   <data name="tg_biomechanicalconduits" xml:space="preserve">
-    <value>八角生物机械组件</value>
+    <value>八角生物机械管线</value>
     <comment>Material tg_biomechanicalconduits</comment>
   </data>
   <data name="tg_weaponparts" xml:space="preserve">
@@ -695,12 +695,11 @@
   </data>
   <data name="tg_shutdowndata" xml:space="preserve">
     <value>大规模能量浪涌分析</value>
-    <comment>tg_shutdowndata
-Material tg_shutdowndata
-Data collected when you observe a Thargoid Titan explode</comment>
+    <comment>Material tg_shutdowndata</comment>
   </data>
   <data name="unknowncorechip" xml:space="preserve">
     <value>战术核心芯片</value>
     <comment>Material unknowncorechip</comment>
   </data>
+  
 </root>
