--- a/DataDefinitions/Properties/MissionType.pt-BR.resx
+++ b/DataDefinitions/Properties/MissionType.pt-BR.resx
@@ -126,6 +126,9 @@
   <data name="Assassinate" xml:space="preserve">
     <value>Assassinato</value>
   </data>
+  <data name="Wing" xml:space="preserve">
+	  <value>Esquadrão</value>
+  </data>
   <data name="Collect" xml:space="preserve">
     <value>Coleta</value>
   </data>
@@ -153,14 +156,17 @@
   <data name="Massacre" xml:space="preserve">
     <value>Massacre</value>
   </data>
+  <data name="Thargoid" xml:space="preserve">
+	  <value>Thargoid</value><comment>e.g. massacre of thargoid targets</comment>
+  </data>
   <data name="Mining" xml:space="preserve">
     <value>Mineração</value>
   </data>
   <data name="Bulk" xml:space="preserve">
-    <value>Transporte</value>
+	  <value>Transporte em Massa</value><comment>e.g. of passengers</comment>
   </data>
   <data name="VIP" xml:space="preserve">
-    <value>Transporte</value>
+	  <value>Transporte VIP</value><comment>e.g. VIP passenger</comment>
   </data>
   <data name="Piracy" xml:space="preserve">
     <value>Pirataria</value>
@@ -214,6 +220,9 @@
   <data name="RankEmp" xml:space="preserve">
     <value>Contrato da Marinha Imperial</value>
   </data>
+  <data name="Megaship" xml:space="preserve">
+	  <value>Meganave</value><comment>e.g. hack or disable missions targeting a megaship</comment>
+  </data>
   <data name="Founder" xml:space="preserve">
     <value>Fundador</value>
   </data>
@@ -229,12 +238,12 @@
     <value>Disfarçada</value>
   </data>
   <data name="Download" xml:space="preserve">
-    <value>Download</value>
-    <comment>Hack type</comment>
+	  <value>Download</value>
+	  <comment>On-foot hack type</comment>
   </data>
   <data name="Upload" xml:space="preserve">
-    <value>Upload</value>
-    <comment>Hack type</comment>
+	  <value>Upload</value>
+	  <comment>On-foot hack type</comment>
   </data>
   <data name="Offline" xml:space="preserve">
     <value>Assentamento Desativado</value>
@@ -298,7 +307,7 @@
     <comment>e.g. rescue from a burning station</comment>
   </data>
   <data name="Evacuation" xml:space="preserve">
-    <value>Evacuação de Passageiro</value>
+	  <value>Evacuação</value><comment>e.g. of passengers</comment>
   </data>
   <data name="Alert" xml:space="preserve">
     <value>Alerta</value>
@@ -306,5 +315,11 @@
   <data name="Scout" xml:space="preserve">
     <value>Alvos de Espionagem Thargoid</value>
     <comment>Massacre type</comment>
+  </data>
+  <data name="Contact" xml:space="preserve">
+	  <value>Contato</value><comment>e.g. mission assigned by an on-foot contact</comment>
+  </data>
+  <data name="Sabotage" xml:space="preserve">
+	  <value>Sabotagem</value><comment>e.g. on-foot settlement sabotage mission</comment>
   </data>
 </root>
