--- a/DataDefinitions/Properties/Modifications.de.resx
+++ b/DataDefinitions/Properties/Modifications.de.resx
@@ -655,5 +655,7 @@
     <value>Dekoratives Gelb</value>
     <comment>Special from 2021 Winking Cat Christmas treasure hunt</comment>
   </data>
-  
+  <data name="GuardianWeaponSturdy" xml:space="preserve">
+    <value>Anti-Guardian-Zonen-Widerstand</value>
+  </data>
 </root>
