--- a/DataDefinitions/Properties/SignalType.de.resx
+++ b/DataDefinitions/Properties/SignalType.de.resx
@@ -129,6 +129,10 @@
     <value>Allgemein</value>
     <comment>SignalType "Generic"</comment>
   </data>
+  <data name="Installation" xml:space="preserve">
+    <value>Installation</value>
+    <comment>SignalType "Installation"</comment>
+  </data>
   <data name="Megaship" xml:space="preserve">
     <value>Megaschiff</value>
     <comment>SignalType "Megaship"</comment>
@@ -145,9 +149,25 @@
     <value>Rohstoffabbau</value>
     <comment>SignalType "ResourceExtraction"</comment>
   </data>
+  <data name="StationAsteroid" xml:space="preserve">
+    <value>Asteroidenstation</value>
+    <comment>SignalType "StationAsteroid"</comment>
+  </data>
+  <data name="StationBernalSphere" xml:space="preserve">
+    <value>Bernal-Station</value>
+    <comment>SignalType "StationBernalSphere"</comment>
+  </data>
   <data name="StationCoriolis" xml:space="preserve">
     <value>Coriolis-Station</value>
     <comment>SignalType "StationCoriolis"</comment>
+  </data>
+  <data name="StationMegaShip" xml:space="preserve">
+    <value>Megaschiff</value>
+    <comment>SignalType "StationMegaShip"</comment>
+  </data>
+  <data name="StationONeilCylinder" xml:space="preserve">
+    <value>ONeil-Station</value>
+    <comment>SignalType "StationONeilCylinder"</comment>
   </data>
   <data name="StationONeilOrbis" xml:space="preserve">
     <value>Orbis-Station</value>
