New Crowdin updates (#2641)

--- a/DataDefinitions/Properties/Ship.de.resx
+++ b/DataDefinitions/Properties/Ship.de.resx
@@ -266,5 +266,7 @@ If transporting via taxi or dropship</comment>
     <value>dein Schiff</value>
     <comment>If transporting via a generic ship (e.g. multicrew)</comment>
   </data>
-  
+  <data name="yourType8" xml:space="preserve">
+	  <value>deine</value><comment>e.g. *your* Type-8 Transporter</comment>
+  </data>
 </root>
