--- a/MissionMonitor/Properties/MissionMonitor.it.resx
+++ b/MissionMonitor/Properties/MissionMonitor.it.resx
@@ -172,5 +172,7 @@
   <data name="extra_details_tooltip" xml:space="preserve">
     <value>Mostra o nasconde ulteriori dettagli riguardanti la missione selezionata</value>
   </data>
-  
+  <data name="header_notes" xml:space="preserve">
+	  <value>Annotazioni:</value><comment>A label for a UI element where a commander can record personal notes about a mission.</comment>
+  </data>
 </root>
