--- a/MissionMonitor/Properties/MissionMonitor.pt-BR.resx
+++ b/MissionMonitor/Properties/MissionMonitor.pt-BR.resx
@@ -172,5 +172,7 @@
   <data name="extra_details_tooltip" xml:space="preserve">
     <value>Mostrar ou ocultar detalhes adicionais sobre a missão selecionada</value>
   </data>
-  
+  <data name="header_notes" xml:space="preserve">
+	  <value>Anotações:</value><comment>A label for a UI element where a commander can record personal notes about a mission.</comment>
+  </data>
 </root>
