--- a/DataDefinitions/Properties/AtmosphereThickness.resx
+++ b/DataDefinitions/Properties/AtmosphereThickness.resx
@@ -117,160 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Aleoids" xml:space="preserve">
-    <value>Aleoida</value>
+  <data name="none" xml:space="preserve">
+    <value>No atmosphere</value>
   </data>
-  <data name="AsterPod" xml:space="preserve">
-    <value>Pod</value>
+  <data name="thin" xml:space="preserve">
+    <value>Thin</value>
   </data>
-  <data name="AsterTree" xml:space="preserve">
-    <value>Tree</value>
+  <data name="thick" xml:space="preserve">
+    <value>Thick</value>
   </data>
-  <data name="Bacterial" xml:space="preserve">
-    <value>Bacterium</value>
+  <data name="hot_thick" xml:space="preserve">
+    <value>Hot Thick</value>
   </data>
-  <data name="Brancae" xml:space="preserve">
-    <value>Brain Tree</value>
-  </data>
-  <data name="Cactoid" xml:space="preserve">
-    <value>Cactoida</value>
-  </data>
-  <data name="CalcitePlates" xml:space="preserve">
-    <value>Plates</value>
-  </data>
-  <data name="ChalicePod" xml:space="preserve">
-    <value>Pod</value>
-  </data>
-  <data name="Clypeus" xml:space="preserve">
-    <value>Clypeus</value>
-  </data>
-  <data name="CollaredPod" xml:space="preserve">
-    <value>Pod</value>
-  </data>
-  <data name="Conchas" xml:space="preserve">
-    <value>Concha</value>
-  </data>
-  <data name="Cone" xml:space="preserve">
-    <value>Bark Mounds</value>
-  </data>
-  <data name="Electricae" xml:space="preserve">
-    <value>Electricae</value>
-  </data>
-  <data name="Fonticulus" xml:space="preserve">
-    <value>Fonticulua</value>
-  </data>
-  <data name="Fumerolas" xml:space="preserve">
-    <value>Fumerola</value>
-  </data>
-  <data name="Fungoids" xml:space="preserve">
-    <value>Fungoida</value>
-  </data>
-  <data name="GroundStructIce" xml:space="preserve">
-    <value>Crystalline Shards</value>
-  </data>
-  <data name="GyrePod" xml:space="preserve">
-    <value>Pod</value>
-  </data>
-  <data name="GyreTree" xml:space="preserve">
-    <value>Tree</value>
-  </data>
-  <data name="IceCrystals" xml:space="preserve">
-    <value>Crystals</value>
-  </data>
-  <data name="MetallicCrystals" xml:space="preserve">
-    <value>Crystals</value>
-  </data>
-  <data name="MineralSpheres" xml:space="preserve">
-    <value>Spheres</value>
-  </data>
-  <data name="MolluscBell" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="MolluscBulb" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="MolluscBullet" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="MolluscCapsule" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="MolluscGlobe" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="MolluscGourd" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="MolluscParasol" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="MolluscReel" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="MolluscSquid" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="MolluscTorus" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="MolluscUmbrella" xml:space="preserve">
-    <value>Mollusc</value>
-  </data>
-  <data name="Osseus" xml:space="preserve">
-    <value>Osseus</value>
-  </data>
-  <data name="PedunclePod" xml:space="preserve">
-    <value>Pod</value>
-  </data>
-  <data name="PeduncleTree" xml:space="preserve">
-    <value>Tree</value>
-  </data>
-  <data name="QuadripartitePod" xml:space="preserve">
-    <value>Pod</value>
-  </data>
-  <data name="Recepta" xml:space="preserve">
-    <value>Recepta</value>
-  </data>
-  <data name="RhizomePod" xml:space="preserve">
-    <value>Pod</value>
-  </data>
-  <data name="Shrubs" xml:space="preserve">
-    <value>Frutexa</value>
-  </data>
-  <data name="SilicateCrystals" xml:space="preserve">
-    <value>Crystals</value>
-  </data>
-  <data name="Sphere" xml:space="preserve">
-    <value>Anemone</value>
-  </data>
-  <data name="StolonPod" xml:space="preserve">
-    <value>Pod</value>
-  </data>
-  <data name="StolonTree" xml:space="preserve">
-    <value>Tree</value>
-  </data>
-  <data name="Stratum" xml:space="preserve">
-    <value>Stratum</value>
-  </data>
-  <data name="ThargoidBarnacle" xml:space="preserve">
-    <value>Thargoid</value>
-  </data>
-  <data name="Tubers" xml:space="preserve">
-    <value>Tuber</value>
-  </data>
-  <data name="Tubus" xml:space="preserve">
-    <value>Tubus</value>
-  </data>
-  <data name="Tussocks" xml:space="preserve">
-    <value>Tussock</value>
-  </data>
-  <data name="Vents" xml:space="preserve">
-    <value>Amphora</value>
-  </data>
-  <data name="VoidHeart" xml:space="preserve">
-    <value>Heart</value>
-  </data>
-  <data name="VoidPod" xml:space="preserve">
-    <value>Pod</value>
+  <data name="normal" xml:space="preserve">
+    <value>Normal</value>
   </data>
 </root>
