Fix Atmosphere Thickness, Discovery Monitor Tab Update, Fix Predictions Some errors with None and No atmosphere and some issues with case were fixed. Discovery Monitor tabs updated to be more useful and automatically update list of planets with bios and predicted bios on those planets. Predictions tightened up mostly on atmosphere types, removed rare cases from typical predictions.

--- a/DataDefinitions/Properties/AtmosphereThickness.resx
+++ b/DataDefinitions/Properties/AtmosphereThickness.resx
@@ -132,4 +132,7 @@
   <data name="normal" xml:space="preserve">
     <value>Normal</value>
   </data>
+  <data name="gas_giant" xml:space="preserve">
+    <value>Gas Giant</value>
+  </data>
 </root>
