Update Organic Cast, Guardian Sectors, Predictions, GUI, Guardian Sites Fix error in casting Organic to Exobiology. Fix logic to check for Guardian Sectors in predictions. Update to Brain Tree and Bark Mounds prediction conditions. Add copy to clipboard button for Nebulae and Guardian Sites in GUI. Update Guardian Site Event script.

--- a/DiscoveryMonitor/Properties/Tab_Nebulae.resx
+++ b/DiscoveryMonitor/Properties/Tab_Nebulae.resx
@@ -120,6 +120,9 @@
   <data name="Button_GetNearest" xml:space="preserve">
     <value>Get Nearest Nebula</value>
   </data>
+  <data name="copy_system_button_tooltip" xml:space="preserve">
+    <value>Copy this system name to your clipboard</value>
+  </data>
   <data name="MaxDistance" xml:space="preserve">
     <value>Max Distance</value>
   </data>
