--- a/DiscoveryMonitor/Properties/Tab_Guardian.resx
+++ b/DiscoveryMonitor/Properties/Tab_Guardian.resx
@@ -120,6 +120,9 @@
   <data name="Button_GetNearest" xml:space="preserve">
     <value>Get Nearest Guardian Sites</value>
   </data>
+  <data name="copy_system_button_tooltip" xml:space="preserve">
+    <value>Copy this system name to your clipboard</value>
+  </data>
   <data name="Filter" xml:space="preserve">
     <value>Filter</value>
   </data>
