--- a/SpeechResponder/Properties/SpeechResponder.resx
+++ b/SpeechResponder/Properties/SpeechResponder.resx
@@ -256,21 +256,25 @@
     <comment>tooltip that appears when the search filter textbox is selected</comment>
   </data>
   <data name="messagebox_unable_to_save_script" xml:space="preserve">
-	  <value>Unable to save script.</value>
+    <value>Unable to save script.</value>
   </data>
   <data name="messagebox_script_name_required" xml:space="preserve">
-	  <value>A script name is required.</value>
+    <value>A script name is required.</value>
   </data>
   <data name="messagebox_script_name_may_not_contain" xml:space="preserve">
-	  <value>The script name may not contain</value><comment>e.g. The script name may not contain ';'.</comment>
+    <value>The script name may not contain</value>
+    <comment>e.g. The script name may not contain ';'.</comment>
   </data>
   <data name="messagebox_script_name_already_in_use" xml:space="preserve">
-	  <value>The script name is already in use.</value>
+    <value>The script name is already in use.</value>
   </data>
   <data name="header_include" xml:space="preserve">
-	  <value>Include</value>
+    <value>Include</value>
   </data>
   <data name="tooltip_include" xml:space="preserve">
-	  <value>Scripts identified here shall be executed prior to the top-level script. This can be used to set preferences or create functions that can be re-used between multiple scripts. Separate multiple script names using ';' as the separator.</value>
+    <value>Scripts identified here shall be executed prior to the top-level script. This can be used to set preferences or create functions that can be re-used between multiple scripts. Separate multiple script names using ';' as the separator.</value>
+  </data>
+  <data name="localizedOr" xml:space="preserve">
+    <value>or</value>
   </data>
 </root>
